--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>StyleX</title>
   </head>
   <body>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
